@@ -1879,5 +1879,7 @@ cl_symbols[] = {
 {EXT_ "OPTIONAL-ANNOTATION", EXT_ORDINARY, NULL, -1, Cnil},
 {EXT_ "LOCATION", EXT_ORDINARY, NULL, -1, Cnil},
 
+{EXT_ "LISP-IMPLEMENTATION-VCS-ID", EXT_ORDINARY, NULL, -1, Cnil},
+
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
