@@ -49,6 +49,9 @@ Returns, as a string, the location of the machine on which ECL runs."
 Returns the version of your ECL as a string."
   "@PACKAGE_VERSION@")
 
+(defun lisp-implementation-vcs-id ()
+  #.si::+commit-id+)
+
 (defun machine-type ()
   "Args: ()
 Returns, as a string, the type of the machine on which ECL runs."
